force-app/main/default/objects/Payment__c/fields/Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount__c</fullName>
    <label>Pending Amount</label>
    <summarizedField>Payment_Line_Item__c.Pending_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Line_Item__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>