force-app/main/default/objects/Payment__c/fields/Processed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Processed_Amount__c</fullName>
    <label>Processed Amount</label>
    <summarizedField>Payment_Line_Item__c.Booking_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Line_Item__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>